--- a/TrivialWikiAPI/TrivialWikiAPI/bin/TrivialWikiAPI.dll.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/bin/TrivialWikiAPI.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -58,7 +58,7 @@
   <location path="Avatars">
     <system.webServer>
       <handlers>
-        <remove name="Nancy"/>
+        <remove name="Nancy" />
       </handlers>
     </system.webServer>
   </location>
