--- a/TrivialWikiAPI/TrivialWikiAPI/packages.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.6.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net452" />
@@ -9,6 +10,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
