--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -187,9 +187,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParseTree.cs" />
     <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SentenceUtils.cs" />
+    <Compile Include="StringUtils.cs" />
+    <Compile Include="TextProcessing.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
