--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -23,7 +23,10 @@
     "angular-img-cropper": "^1.1.0",
     "angular-scroll-glue": "^2.0.6",
     "moment": "^2.13.0",
-    "loaders.css": "^0.1.2"
+    "loaders.css": "^0.1.2",
+    "angular-material": "^1.0.9",
+    "angular-aria": "^1.5.6",
+    "angular-material-icons": "^0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
