--- a/TrivialWikiAPI/POSTagger/App.config
+++ b/TrivialWikiAPI/POSTagger/App.config
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="Stanford.JarRoot" value="F:\stanford-corenlp-3.6.0-models"/>
+
+    <add key="Tagger.WikipediaResult" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\WikiResult.txt"/>
+    <add key="Tagger.CleanText" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\CleanText.txt"/>
+    
+    <add key="Tagger.References" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\References.txt"/>
+    <add key="Tagger.NewParse" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\NewParse.txt"/>
+    <add key="Tagger.ListParse" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\ListParse.txt"/>
+
+    <add key="Tagger.OutputJson" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputJson.txt"/>
+    <add key="Tagger.OutputTest" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputTest.txt"/>
+    <add key="Tagger.OutputTestJson" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputTestJson.txt"/>
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
