--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -174,6 +174,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -204,6 +205,9 @@
       <Project>{400be6e8-5e92-4d67-847e-81e508ff582b}</Project>
       <Name>WikipediaResourceFinder</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
