--- a/TrivialWikiAPI/POSTagger/App.config
+++ b/TrivialWikiAPI/POSTagger/App.config
@@ -3,16 +3,16 @@
   <appSettings>
     <add key="Stanford.JarRoot" value="F:\stanford-corenlp-3.6.0-models"/>
 
-    <add key="Tagger.WikipediaResult" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\WikiResult.txt"/>
-    <add key="Tagger.CleanText" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\CleanText.txt"/>
+    <add key="Tagger.WikipediaResult" value="D:\Licenta\Files\WikiResult.txt"/>
+    <add key="Tagger.CleanText" value="D:\Licenta\Files\CleanText.txt"/>
     
-    <add key="Tagger.References" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\References.txt"/>
-    <add key="Tagger.NewParse" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\NewParse.txt"/>
-    <add key="Tagger.ListParse" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\ListParse.txt"/>
+    <add key="Tagger.References" value="D:\Licenta\Files\References.txt"/>
+    <add key="Tagger.NewParse" value="D:\Licenta\Files\NewParse.txt"/>
+    <add key="Tagger.ListParse" value="D:\Licenta\Files\ListParse.txt"/>
 
-    <add key="Tagger.OutputJson" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputJson.txt"/>
-    <add key="Tagger.OutputTest" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputTest.txt"/>
-    <add key="Tagger.OutputTestJson" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\OutputTestJson.txt"/>
+    <add key="Tagger.OutputJson" value="D:\Licenta\Files\OutputJson.txt"/>
+    <add key="Tagger.OutputTest" value="D:\Licenta\Files\OutputTest.txt"/>
+    <add key="Tagger.OutputTestJson" value="D:\Licenta\Files\OutputTestJson.txt"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
