--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -192,6 +192,8 @@
     <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SentenceDependency.cs" />
+    <Compile Include="SentenceInformation.cs" />
     <Compile Include="SentenceUtils.cs" />
     <Compile Include="StringUtils.cs" />
     <Compile Include="TextProcessing.cs" />
