--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\SentenceDependency.cs" />
     <Compile Include="Model\SentenceInformation.cs" />
+    <Compile Include="SentenceGenerator.cs" />
     <Compile Include="SentenceProcessing.cs" />
     <Compile Include="SentenceUtils.cs" />
     <Compile Include="StringUtils.cs" />
@@ -207,6 +208,10 @@
     <ProjectReference Include="..\WikipediaResourceFinder\WikipediaResourceFinder.csproj">
       <Project>{400be6e8-5e92-4d67-847e-81e508ff582b}</Project>
       <Name>WikipediaResourceFinder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WikiTrivia.QuestionGenerator\WikiTrivia.QuestionGenerator.csproj">
+      <Project>{111C73E2-8FD4-4030-A565-31EF96406B20}</Project>
+      <Name>WikiTrivia.QuestionGenerator</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
