--- a/TrivialWikiAPI/WikiTrivia.QuestionGenerator/WikiTrivia.QuestionGenerator.csproj
+++ b/TrivialWikiAPI/WikiTrivia.QuestionGenerator/WikiTrivia.QuestionGenerator.csproj
@@ -41,8 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generators\AnswerGenerator.cs" />
+    <Compile Include="Generators\BasedOnAGENTQGenerator.cs" />
     <Compile Include="Generators\BasedOnCCQGenerator.cs" />
     <Compile Include="Generators\BasedOnCOPQGenerator.cs" />
+    <Compile Include="Generators\BasedOnDateGenerator.cs" />
+    <Compile Include="Generators\BasedOnINQGenerator.cs" />
     <Compile Include="Generators\BasedOnNSUBJQGenerator.cs" />
     <Compile Include="Generators\BasedOnSubjectQGenerator.cs" />
     <Compile Include="Generators\BasedOnDOBJQGenerator.cs" />
